[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Icons/save.png" type="Texture" id=1]
[ext_resource path="res://Assets/Icons/file.png" type="Texture" id=2]
[ext_resource path="res://Assets/Icons/open.png" type="Texture" id=3]
[ext_resource path="res://Assets/Icons/save_as.png" type="Texture" id=4]
[ext_resource path="res://Assets/Icons/credits.png" type="Texture" id=5]
[ext_resource path="res://Assets/Icons/settings.png" type="Texture" id=6]
[ext_resource path="res://Assets/Icons/power.png" type="Texture" id=7]
[ext_resource path="res://Assets/Scripts/main.gd" type="Script" id=8]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 0.046
margin_bottom = 5.16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="TopBar"]
anchor_left = 0.031
anchor_top = 0.2
anchor_right = 0.969
anchor_bottom = 0.8
margin_left = -29.76
margin_top = -6.0
margin_right = 29.7599
margin_bottom = 6.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="Button" parent="TopBar/Container"]
margin_left = 202.0
margin_right = 268.0
margin_bottom = 30.0
hint_tooltip = "Create a new file."
mouse_default_cursor_shape = 2
text = "New"
icon = ExtResource( 2 )

[node name="Open" type="Button" parent="TopBar/Container"]
margin_left = 272.0
margin_right = 345.0
margin_bottom = 30.0
hint_tooltip = "Open an existing file."
mouse_default_cursor_shape = 2
text = "Open"
icon = ExtResource( 3 )

[node name="Save" type="Button" parent="TopBar/Container"]
margin_left = 349.0
margin_right = 416.0
margin_bottom = 30.0
hint_tooltip = "Save changes to your current file."
mouse_default_cursor_shape = 2
text = "Save"
icon = ExtResource( 1 )

[node name="SaveAs" type="Button" parent="TopBar/Container"]
margin_left = 420.0
margin_right = 507.0
margin_bottom = 30.0
hint_tooltip = "Save your current file as a new file."
mouse_default_cursor_shape = 2
text = "Save As"
icon = ExtResource( 4 )

[node name="Settings" type="Button" parent="TopBar/Container"]
margin_left = 511.0
margin_right = 600.0
margin_bottom = 30.0
hint_tooltip = "Opens the settings menu (not implemented yet)."
mouse_default_cursor_shape = 8
disabled = true
text = "Settings"
icon = ExtResource( 6 )

[node name="Credits" type="Button" parent="TopBar/Container"]
margin_left = 604.0
margin_right = 687.0
margin_bottom = 30.0
hint_tooltip = "Show the credits."
mouse_default_cursor_shape = 2
text = "Credits"
icon = ExtResource( 5 )

[node name="Quit" type="Button" parent="TopBar/Container"]
margin_left = 691.0
margin_right = 757.0
margin_bottom = 30.0
hint_tooltip = "Close the application."
mouse_default_cursor_shape = 2
text = "Quit"
icon = ExtResource( 7 )

[node name="TextEdit" type="TextEdit" parent="."]
anchor_top = 0.055
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.299999
text = "Text"
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
breakpoint_gutter = true
fold_gutter = true
highlight_all_occurrences = true
smooth_scrolling = true
minimap_draw = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFile" type="FileDialog" parent="."]
margin_left = 240.0
margin_top = 135.0
margin_right = 720.0
margin_bottom = 405.0
mouse_default_cursor_shape = 2
window_title = "Open File"
resizable = true
mode = 0
access = 2
show_hidden_files = true
current_dir = "/Users/Flexy_GG1/Documents"
current_file = "Documents"
current_path = "/Users/Flexy_GG1/Documents/Documents"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveFileAs" type="FileDialog" parent="."]
margin_left = 240.0
margin_top = 135.0
margin_right = 720.0
margin_bottom = 405.0
mouse_default_cursor_shape = 2
window_title = "Save File As"
access = 2
show_hidden_files = true
current_dir = "/Users/Flexy_GG1/Documents"
current_file = "Untitled.code"
current_path = "/Users/Flexy_GG1/Documents/Untitled.code"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="WindowDialog" parent="."]
margin_left = 240.0
margin_top = 135.0
margin_right = 720.0
margin_bottom = 405.0
window_title = "Credits"

[node name="TextEdit" type="TextEdit" parent="Credits"]
margin_right = 480.0
margin_bottom = 270.0
text = "IE Code by Ihsan Entertainment
Lincensed under CC BY SA.
GitHub (Source code and download): https://github.com/Ihsan-Entertainment/IE-Code

----------

This game uses Godot Engine, available under the following license:

Copyright (c) 2007-2021 Juan Linietsky, Ariel Manzur. Copyright (c) 2014-2021 Godot Engine contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE."
readonly = true
context_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
selecting_enabled = false
smooth_scrolling = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TopBar/Container/New" to="." method="new_file"]
[connection signal="pressed" from="TopBar/Container/Open" to="." method="open_file_button"]
[connection signal="pressed" from="TopBar/Container/Save" to="." method="save_file_button"]
[connection signal="pressed" from="TopBar/Container/SaveAs" to="." method="save_file_as_button"]
[connection signal="pressed" from="TopBar/Container/Settings" to="." method="settings_button"]
[connection signal="pressed" from="TopBar/Container/Credits" to="." method="credits_button"]
[connection signal="pressed" from="TopBar/Container/Quit" to="." method="quit_button"]
[connection signal="file_selected" from="OpenFile" to="." method="open_file"]
[connection signal="file_selected" from="SaveFileAs" to="." method="save_file_as"]
